# Distribuidos

./: .gitignore  Explicacion.md  README.md  data.json  docker-compose.yml  pyproject.toml
.github/workflows/: linters.yml  tests.yml  typechecking.yml
RemoteTypes/: __init__.py
config/: remotetypes.config
docs/: enunciado1.md  requisitos.md
remotetypes/: __init__.py  cliente.py  command_handlers.py  config.json  customset.py  factory.py  iterable.py  kafka.py  remotedict.py  remotelist.py  remoteset.py  remotetypes.ice  server.py
tests/: __init__.py  test_stringset.py
